scalaplugin/src/test/resource/acyclic/src/test/resources/success/dag/E.scala
package success.dag

class E {
  val a: A = null
  val d = new D
}
