scalaplugin/src/test/resource/acyclic/src/test/resources/fail/simple/A.scala
package fail.simple
import acyclic.file


class A {
  val b: B = null
}
